src/styles/components/footer.scss
@use '../abstracts' as *;

.Footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2rem 1rem;
  background: gray;
  gap: 1rem;
  .Footer__inner {
    text-align: center;
  }
}

.footer {
  padding: 2em 0;
  // position: fixed;
  // z-index: -100;
  // bottom: 0;
  width: 100%;
  font-family: 'Source Sans Pro', sans-serif;
  // background-color: gray;
  color: white;
  background-color: black;
  svg {
    width: 26px;
    path {
      fill: white;
    }
  }
  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }
  a {
    color: white;
    text-decoration: none;
  }
  .footer__social {
    display: flex;
    margin-top: 1em;
    li + li {
      margin-left: 2em;
    }
  }
}

.footer__inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2em;
  margin: 0 auto;
  padding: 1.5em 0;
  @include md {
    flex-direction: row;
    justify-content: space-between;
    width: 80%;
    align-items: center;
  }
}

.footer__right {
  display: flex;
  gap: 3em;

  .link-group {
    text-align: center;
    li {
      &:not(:last-child) {
        margin-bottom: 0.5em;
      }

      .link-group__header {
        margin-bottom: 1em;
      }
    }
    @include md {
      text-align: left;
    }
  }
}

.authorLink {
  color: $orange-accent !important;
  text-decoration: underline !important;
}

